--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -7,6 +7,7 @@ exemptLabels:
   - Priority: P0
   - Priority: P1
   - Priority: P2
+  - exceptionLabel 
 # Label to use when marking an issue as stale
 staleLabel: stale issue
 # Comment to post when marking an issue as stale. Set to `false` to disable
