--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,12 +1,12 @@
 # Configuration for probot-stale - https://github.com/probot/stale
 
 # Number of days of inactivity before an Issue or Pull Request becomes stale
-# daysUntilStale: 60
-daysUntilStale: 1
+daysUntilStale: 50
+
 
 # Number of days of inactivity before an Issue or Pull Request with the stale label is closed.
 # Set to false to disable. If disabled, issues still need to be closed manually, but will remain marked as stale.
-daysUntilClose: 1
+daysUntilClose: 10
 
 # Only issues or pull requests with all of these labels are check if stale. Defaults to `[]` (disabled)
 onlyLabels: []
@@ -40,7 +40,7 @@ staleLabel: "stale issue"
 # Comment to post when marking as stale. Set to `false` to disable
 markComment: >
   This issue has been automatically marked as stale because it has not had
-  recent activity. It will be closed if no further activity occurs. Thank you
+  recent activity. It will be closed after 10 days if no further activity occurs. Thank you
   for your contributions.
 
 # Comment to post when removing the stale label.
